vm-builder (0.9.1-0ubuntu0) UNRELEASED; urgency=low

  * add --install-mirror to fix LP: #291639
  * implement --iso to fix LP: #291590

 -- Nicolas Barcet <nicolas.barcet@ubuntu.com>  Fri, 31 Oct 2008 17:35:17 +0100

vm-builder (0.9-0ubuntu3) intrepid; urgency=low

  [ Johan Euphrosine ]
  * Fix exception when suite provided does not exist (LP: #281801) 
    and provide unit test for it.

  [ Chuck Short ]
  * Added parameters required for EC2 plugin.
  * Use ec2_name instead of hostname when submitting an AMI.
  * Update xen_kernel_path and xen_ramdisk_path for intrepid.
  * Default to amazon kernels/ramdisk pairs for now.
  * Split out ec2 module into its own package. (LP: #284762)

  [ Nicolas Barcet ]
  * Error out if domain is undefined (LP: #280125)
  * Fix --dest so that it is actually used now (LP: #280091)
  * Fix -c handling, values are now used (LP: #279159)
  * Create /var/run/network to fix bug LP: #276365
  * Handle fsimage type vms (Xen) in fstab and (hopefully) libvirt  (LP: #282109)
  * Components where not parsed correctly (LP: #283263)
  * preflight_check() was called twice in a row in vm.py for no aparant
    reasons
  * Change default suite to intrepid
  * Intrepid needs groot=uuid, else update-grub tries to outsmart us later on
    and it won't boot as it cannot guess the uuid right.
  * Couple fixes when calling devletters, which is a function
  * Double parenthesis removed in devicemap.tmpl
  * Added function isDomain to fix bug LP: #284746
  * Documented unusual conf name value in help to fix bug LP: #284614
  * Fixed a bug in set_defaults occuring on reading untyped value from the
    configuration file
  * Match ec2 vocabulary by adding option name and clarifying help 
    (LP: #284765, LP: #285170, LP: #285165)
  * Added a check for xen hypervisor when ec2 is selected (LP: #285191)
  * Added checks for presence of bucket, access key and secret key for ec2 
    (LP: #284757)